@@ -1,3 +1,4 @@
+* Add Python3 support
 * Add configuration for default use category's accounts and taxes
 
 Version 3.8.0 - 2015-11-02
